fix bag z-index

--- a/src/sass/blocks/_dark.scss
+++ b/src/sass/blocks/_dark.scss
@@ -13,7 +13,3 @@
 		transform: scale(1.1);
 	}
 }
-
-body {
-	background: $body-bg-color;
-}
