--- a/src/sass/blocks/_square.scss
+++ b/src/sass/blocks/_square.scss
@@ -18,7 +18,7 @@
 		background-color: $square-bottom-cart-color;
 		top: -15px;
 		left: -15px;
-		z-index: -2;
+		z-index: 1;
 		transition: all 0.6s;
 		&_active {
 			top: -35px;
@@ -26,7 +26,7 @@
 			width: 390px;
 			height: 390px;
 			background-color: $square-bottom-cart-color;
-			z-index: -2;
+			z-index: 1;
 			transition: all 0.6s;
 		}
 	}
@@ -36,7 +36,7 @@
 		background-color: $midle-main-color;
 		top: -7px;
 		left: -7px;
-		z-index: -1;
+		z-index: 2;
 		transition: all 0.6s;
 		&_active {
 			transition: all 0.6s;
@@ -45,7 +45,7 @@
 			background-color: $midle-main-color;
 			top: -20px;
 			left: -20px;
-			z-index: -1;
+			z-index: 2;
 		}
 	}
 	&_midle-works {
