--- a/src/sass/blocks/_works.scss
+++ b/src/sass/blocks/_works.scss
@@ -1,4 +1,5 @@
 .works {
+	//z-index: -3;
 	min-height: 710px;
 	position: relative;
 	padding-top: 30px;
@@ -19,12 +20,15 @@
 
 		img {
 			transition: all 0.6s;
+
 			&:hover {
 				transform: scale(1.03);
 			}
 		}
 	}
 	&__example {
+		position: relative;
+		z-index: 3;
 		img {
 			object-fit: cover;
 		}
