--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -9,6 +9,10 @@
 	padding: 0;
 }
 
+body {
+	//background: $body-bg-color;
+}
+
 .container {
 	position: relative;
 	max-width: 1350px;
